--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   flutter_zoom_drawer: ^3.0.3
   easy_sidemenu: ^0.4.1
-  flutter_vector_icons: ^1.0.0
+  flutter_vector_icons: ^2.0.0
   charts_flutter: ^0.12.0
-
+  json_annotation: ^4.7.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -50,7 +50,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
+  json_serializable: ^6.5.4
+  build_runner: ^2.3.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
