--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   charts_flutter: ^0.12.0
   sqflite: ^2.2.0+3
   json_annotation: ^4.7.0
+  pdf: ^3.8.4
+  advance_pdf_viewer: ^2.0.1
+  syncfusion_flutter_pdfviewer: ^20.3.59
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -69,6 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/agriMOPLogo.png
+    - assets/example.pdf
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
