--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   sparkline: ^1.0.0
   flutter_staggered_grid_view: ^0.6.2
   staggered_grid_view_flutter: ^0.0.4
+  d_chart: ^1.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
