--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   staggered_grid_view_flutter: ^0.0.4
   d_chart: ^1.0.0
+  mockito: ^5.3.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
